2007-08-20  Luca Bruno  <lethalman88@gmail.com>
	
	== Released 0.1.4 version ==

	* Missing documentation was covered for Doxygen

2007-08-19  Luca Bruno  <lethalman88@gmail.com>

	* src/main.c (_parse_args): an comand line option parser was created to replace getopt

	* examples/console/SConscript (target): added

	* examples/SConscript: added

	* examples/embedding/SConscript: added

	* syx.desktop: added

	* syx.sln: added for MSVC support

	* syx.vcproj: added for MSVC support

	* syx/syx-plugins.c (_syx_plugin_default_method): added
	(syx_plugins_init): do not create a static method on initialization because it's not being inserted in a GC root

2007-08-17  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/gtk.i: remove pango dependency temporarly

	* plugins/gtk/pango.i: removed temporarly

	* plugins/gtk/st/PangoAttrList.st: removed temporarly

	* plugins/gtk/SConscript: link to gdk-win32

2007-08-16  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/plugin-init.c (syx_plugin_initialize): parse all remaining st files
	(syx_g_closure_marshal): leave gdk threads before entering the smalltalk callback

	* plugins/gtk/st/GtkTools.st: added a textview for evaluating code

	* plugins/gtk/st/Gtk.st: added missing GTK+ classes

	* st/kernel/YXTools.st (onDoIt): evaluate code

	* st/kernel/Compiler.st (identifierToken): handle identifier:= as an assigment

	* st/kernel/FileStream.st (StdIOStream): added class and methods for standard I/O
	(open:for:): support append mode, read and write create (w+)

	* syx/syx-primitives.c (FileStream_fileOp): added more checks, use O_CREAT flags for write, support w+ and append mode

	* syx/syx-scheduler.c (syx_scheduler_add_process): fixed process scheduling

	* syx/syx-signal.c (_syx_internal_sighandler): save a recovered copy of the image on SIGSEGV or SIGILL
	(_syx_save_recovered_image): added

	* src/main.c (_do_recovery): added for recovering an image from a possibly broken Process
